// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseAndValidateExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > maps "source" to "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/browser.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > shows a best effort message if there is no "source" field either 1`] = `
[Error: 
- package.json: \`exports\` are missing, please set a minimal configuration, for example:
- "exports": {
-   ".": {
-     "source": "./src/index.js",
-     "default": "./dist/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > uses the "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/index.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > uses the "main" and "source" fields to specify a suggested "exports" definition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'commonjs'}) > invalid packages > the "source" field should be removed when "exports" is set 1`] = `
[Error: 
- package.json: the "source" property can be removed, as it is equal to exports["."].source.]
`;

exports[`parseAndValidateExports({type: 'module'}) > invalid packages > the "exports" key is required > maps "source" to "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/browser.ts",
-       "import": "./lib/browser.js"
-       "require": "./lib/browser.cjs"
-     }
-     "require": "./lib/index.cjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'module'}) > invalid packages > the "exports" key is required > shows a best effort message if there is no "source" field either 1`] = `
[Error: 
- package.json: \`exports\` are missing, please set a minimal configuration, for example:
- "exports": {
-   ".": {
-     "source": "./src/index.js",
-     "default": "./dist/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'module'}) > invalid packages > the "exports" key is required > uses the "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/index.ts",
-       "import": "./lib/browser.js"
-       "require": "./lib/browser.cjs"
-     }
-     "require": "./lib/index.cjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'module'}) > invalid packages > the "exports" key is required > uses the "main" and "source" fields to specify a suggested "exports" definition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "require": "./lib/index.cjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: 'module'}) > invalid packages > the "source" field should be removed when "exports" is set 1`] = `
[Error: 
- package.json: the "source" property can be removed, as it is equal to exports["."].source.]
`;

exports[`parseAndValidateExports({type: undefined}) > invalid packages > the "exports" key is required > maps "source" to "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/browser.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: undefined}) > invalid packages > the "exports" key is required > shows a best effort message if there is no "source" field either 1`] = `
[Error: 
- package.json: \`exports\` are missing, please set a minimal configuration, for example:
- "exports": {
-   ".": {
-     "source": "./src/index.js",
-     "default": "./dist/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: undefined}) > invalid packages > the "exports" key is required > uses the "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/index.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: undefined}) > invalid packages > the "exports" key is required > uses the "main" and "source" fields to specify a suggested "exports" definition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseAndValidateExports({type: undefined}) > invalid packages > the "source" field should be removed when "exports" is set 1`] = `
[Error: 
- package.json: the "source" property can be removed, as it is equal to exports["."].source.]
`;

exports[`parseExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > maps "source" to "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/browser.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > shows a best effort message if there is no "source" field either 1`] = `
[Error: 
- package.json: \`exports\` are missing, please set a minimal configuration, for example:
- "exports": {
-   ".": {
-     "source": "./src/index.js",
-     "default": "./dist/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > uses the "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/index.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'commonjs'}) > invalid packages > the "exports" key is required > uses the "main" and "source" fields to specify a suggested "exports" definition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'commonjs'}) > invalid packages > the "source" field should be removed when "exports" is set 1`] = `
[Error: 
- package.json: the "source" property can be removed, as it is equal to exports["."].source.]
`;

exports[`parseExports({type: 'module'}) > invalid packages > the "exports" key is required > maps "source" to "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/browser.ts",
-       "import": "./lib/browser.js"
-       "require": "./lib/browser.cjs"
-     }
-     "require": "./lib/index.cjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'module'}) > invalid packages > the "exports" key is required > shows a best effort message if there is no "source" field either 1`] = `
[Error: 
- package.json: \`exports\` are missing, please set a minimal configuration, for example:
- "exports": {
-   ".": {
-     "source": "./src/index.js",
-     "default": "./dist/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'module'}) > invalid packages > the "exports" key is required > uses the "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/index.ts",
-       "import": "./lib/browser.js"
-       "require": "./lib/browser.cjs"
-     }
-     "require": "./lib/index.cjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'module'}) > invalid packages > the "exports" key is required > uses the "main" and "source" fields to specify a suggested "exports" definition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "require": "./lib/index.cjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: 'module'}) > invalid packages > the "source" field should be removed when "exports" is set 1`] = `
[Error: 
- package.json: the "source" property can be removed, as it is equal to exports["."].source.]
`;

exports[`parseExports({type: undefined}) > invalid packages > the "exports" key is required > maps "source" to "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/browser.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: undefined}) > invalid packages > the "exports" key is required > shows a best effort message if there is no "source" field either 1`] = `
[Error: 
- package.json: \`exports\` are missing, please set a minimal configuration, for example:
- "exports": {
-   ".": {
-     "source": "./src/index.js",
-     "default": "./dist/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: undefined}) > invalid packages > the "exports" key is required > uses the "browsers" field to specify a "browser" condition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "browser": {
-       "source": "./src/index.ts",
-       "import": "./lib/browser.mjs"
-       "require": "./lib/browser.js"
-     }
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: undefined}) > invalid packages > the "exports" key is required > uses the "main" and "source" fields to specify a suggested "exports" definition 1`] = `
[Error: 
- package.json: \`exports\` are missing, it should be:
- "exports": {
-   ".": {
-     "source": "./src/index.ts",
-     "import": "./lib/index.mjs",
-     "default": "./lib/index.js"
-   },
-   "./package.json": "./package.json"
- }]
`;

exports[`parseExports({type: undefined}) > invalid packages > the "source" field should be removed when "exports" is set 1`] = `
[Error: 
- package.json: the "source" property can be removed, as it is equal to exports["."].source.]
`;
